--- a/index.html
+++ b/index.html
@@ -45,82 +45,9 @@
             <div class="rightMain col-md-9 transition-swipeup" id="swup">
                 <div class="homeMain">
                     <p>
-                    <h1 align="center">Hi 👋, I&#39;m <a href="https://bindhumadhav.in/" target="blank">
-                            Bindhu Madhava Varma</a></h1>
+                    <h1 align="center">Hi 👋, I&#39;m Bindhu Madhava Varma</h1>
                     </p>
-                    <h3 align="center">A passionate Software Engineer from Bangalore, India</h3>
-                    <br />
-
-                    <p>
-
-                        <a target="_blank" align="center">
-                            <img align="right" top="500" height="300" width="400" alt="GIF"
-                                src="https://media.giphy.com/media/SWoSkN6DxTszqIKEqv/giphy.gif">
-                        </a>
-                        <br />
-
-                        - 🔭 I’m currently working at <a href="https://shell.com" target="blank">Shell </a> as Associate
-                        Software Engineer
-
-                        - 🌱 I’m currently Working on Azure Integration Technologies (Azure Data Factory, Logic Apps,
-                        Azure Functions, Azure Databricks)
-
-                        - 🤝 I’m available for freelancing.
-
-                        - 🌱 I’m currently learning Azure Integration Technologies
-
-                        - 📫 How to reach me <strong>bindhumadhavavarma@gmail.com</strong>
-
-                        - 📄 Know about my experiences at <a href="https://bindhumadhav.in" target="blank">My Profile
-                            site</a>
-                        <br />
-                    </p>
-
-                    <div id="user-content-toc">
-                        <ul align="center">
-                            <summary>
-                                <h2 style="display: inline-block">Technologies That I Know👨🏻‍💻</h2>
-                            </summary>
-                        </ul>
-                    </div>
-                    <!--tech stack icons-->
-                    <p align="center">
-                        <a href="https://skillicons.dev">
-                            <img
-                                src="https://skillicons.dev/icons?i=androidstudio,azure,bootstrap,c,cs,cloudflare,css,dart,discord,docker,dotnet,express,figma,firebase,flask,flutter,git,github,html,java,js,jquery,mongodb,mysql,nodejs,php,postgres,postman,py,r,react,redux,sass,tailwind,ts,visualstudio,vscode" />
-                        </a>
-                    </p>
-                    <h2 align="center">My Stats 📊</h2>
-                    <p align="center">
-                        <img style="width:46%"
-                            src="https://github-readme-stats.vercel.app/api?username=bindhumadhavavarma&theme=vue-dark&show_icons=true&hide_border=true&count_private=true" />
-                        <img style="width:49%"
-                            src="https://github-readme-streak-stats.herokuapp.com/?user=bindhumadhavavarma&theme=vue-dark&hide_border=true&count_private=true" />
-                    </p>
-                    <p align="center">
-                        <img
-                            src="https://github-readme-stats.vercel.app/api/top-langs/?username=bindhumadhavavarma&theme=vue-dark&show_icons=true&hide_border=true&layout=donut&langs_count=10&count_private=true" />
-                    </p>
-
-
-                    <h3 align="center"> <img src="https://media.giphy.com/media/iY8CRBdQXODJSCERIr/giphy.gif" width="30"
-                            height="30" style="margin-right: 10px;">Connect with me 🤝 </h3>
-
-                    <p align="center">
-
-                    <div align="center" class="icons-social" style="margin-left: 10px;">
-                        <a style="margin-left: 10px;" target="_blank" href="https://www.linkedin.com/in/cbmvarma/">
-                            <img src="https://img.icons8.com/doodle/40/000000/linkedin--v2.png"></a>
-                        <a style="margin-left: 10px;" target="_blank" href="https://github.com/bindhumadhavavarma">
-                            <img src="https://img.icons8.com/doodle/40/000000/github--v1.png"></a>
-                        <a style="margin-left: 10px;" target="_blank" href="https://instagram.com/bindhu_madhav_varma">
-                            <img src="https://img.icons8.com/doodle/40/000000/instagram-new--v2.png"></a>
-                        <a style="margin-left: 5px;" target="_blank" href="https://bindhumadhav.in">
-                            <img src="https://img.icons8.com/dusk/40/000000/domain.png"></a>
-                    </div>
-
-                    </p>
-
+                    <h4 align="center">A passionate Software Engineer from Bangalore, India. Currently working as a Software Engineer at <a href="shell.com">Shell</a></h4>
                 </div>
 
             </div>
