--- a/skills.html
+++ b/skills.html
@@ -21,15 +21,20 @@
 
             <div class="leftMain col-md-3">
                 <div class="inner">
-                    <div class="profilePicWrapper"><img src="images/me.jpg" alt="" class="profilePic" style="margin-bottom:15px;"></div>
+                    <div class="profilePicWrapper"><img src="images/me.jpg" alt="" class="profilePic"
+                            style="margin-bottom:15px;"></div>
                     <div class="mainName">
                         <h1>Bindhu Madhava Varma</h1>
                     </div>
                     <div>
-                        <a target="_blank" href="https://www.facebook.com/bindumadhava.varma/"><i class="fab fa-facebook-f"></i></a>
-                        <a target="_blank" href="mailto:bindhu.19bcd7116@vitap.ac.in"><i class="fas fa-envelope"></i></a>
-                        <a target="_blank" href="https://www.linkedin.com/in/bindhu-madhav-varma-c-58140b1aa/"><i class="fab fa-linkedin-in"></i></a>
-                        <a target="_blank" href="https://github.com/BINDHUMADHAVAVARMA"><i class="fab fa-github"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/bindumadhava.varma/"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a target="_blank" href="mailto:bindhu.19bcd7116@vitap.ac.in"><i
+                                class="fas fa-envelope"></i></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/bindhu-madhav-varma-c-58140b1aa/"><i
+                                class="fab fa-linkedin-in"></i></a>
+                        <a target="_blank" href="https://github.com/BINDHUMADHAVAVARMA"><i
+                                class="fab fa-github"></i></a>
                     </div>
                     <div>
                         <a href="pdfs/Resume.pdf" class="btn btn-primary" download>Download CV</a>
@@ -39,150 +44,21 @@
             </div>
             <div class="rightMain col-md-9 transition-swipedown" id="swup">
                 <div class="inner" style="overflow-x: hidden;">
-                    <div>
-                        <h1 style="color: white;">Skills</h1>
-                    </div>
                     <div class="container-fluid row" id="skills_tile">
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swiperight" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/c.webp" height="80px" width="80px" alt="">
-                                <div id="text">
-                                    <span>C (intermediate)</span>
-                                </div>
-                            </div>
+                        <div id="user-content-toc">
+                            <ul align="center">
+                                <summary>
+                                    <h2 style="display: inline-block">Technologies That I Know👨🏻‍💻</h2>
+                                </summary>
+                            </ul>
                         </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipedown" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/java.png" height="80px" width="60px" alt="">
-                                <div id="text">
-                                    <span>Java (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipeleft" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/python.png" height="80px" width="80px" alt="">
-                                <div id="text">
-                                    <span>Python (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swiperight" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/r.svg" height="80px" width="80px" alt="">
-                                <div id="text">
-                                    <span>R (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipedown" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/html.png" height="80px" width="80px" alt="">
-                                <div id="text">
-                                    <span>HTML (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipeleft" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/css.png" height="80px" width="60px" alt="">
-                                <div id="text">
-                                    <span>CSS (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swiperight" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/javascript.png" height="80px" width="130px" alt="">
-                                <div id="text">
-                                    <span>JavaScript (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipedown" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/json.png" height="80px" width="80px" alt="">
-                                <div id="text">
-                                    <span>JSON (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipeleft" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/ajax.png" height="80px" width="110px" alt="">
-                                <div id="text">
-                                    <span>AJAX (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swiperight" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/jquery.png" height="80px" width="80px" alt="">
-                                <div id="text">
-                                    <span>Jquery (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipedown" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/php.png" height="80px" alt="">
-                                <div id="text">
-                                    <span>PHP (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipeleft" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/react.png" height="80px" width="110px" alt="">
-                                <div id="text">
-                                    <span>React (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swiperight" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/node.png" height="80px" width="80px" alt="">
-                                <div id="text">
-                                    <span>NodeJs (beginner)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipedown" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/nextjs.png" height="80px" alt="">
-                                <div id="text">
-                                    <span>NextJs (beginner)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipeleft" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/typescript.png" height="80px" width="80px" alt="">
-                                <div id="text">
-                                    <span>TypeScript (beginner)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swiperight" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/flutter.png" height="80px" width="80px" alt="">
-                                <div id="text">
-                                    <span>Flutter (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 transition-swipedown" id="tile" href="#">
-                            <div class="tileinner">
-                                <img src="images/dart.png" height="80px" width="80px" alt="">
-                                <div id="text">
-                                    <span>Dart (intermediate)</span>
-                                </div>
-                            </div>
-                        </div>
-
-
-
+                        <!--tech stack icons-->
+                        <p align="center">
+                            <a href="https://skillicons.dev">
+                                <img
+                                    src="https://skillicons.dev/icons?i=androidstudio,azure,bootstrap,c,cs,cloudflare,css,dart,discord,docker,dotnet,express,figma,firebase,flask,flutter,git,github,html,java,js,jquery,mongodb,mysql,nodejs,php,postgres,postman,py,r,react,redux,sass,tailwind,ts,visualstudio,vscode" />
+                            </a>
+                        </p>
                     </div>
                 </div>
 
@@ -207,11 +83,15 @@
                     <div class="menuItem col-sm-2" id="mm0">
                         <a href="/index.html"><i class="fas fa-house-user"></i></a>
                     </div>
-                    <div class="menuItem col-sm-2" id="mm1"><a href="/education.html"><i class="fas fa-graduation-cap"></i></a></div>
+                    <div class="menuItem col-sm-2" id="mm1"><a href="/education.html"><i
+                                class="fas fa-graduation-cap"></i></a></div>
                     <div class="menuItem col-sm-2" id="mm2"><a href="/skills.html"><i class="fas fa-book"></i></a></div>
-                    <div class="menuItem col-sm-2" id="mm3"><a href="/internships.html"><i class="fas fa-briefcase"></i></a></div>
-                    <div class="menuItem col-sm-2" id="mm4"><a href="/projects.html"><i class="fas fa-file-code"></i></a></div>
-                    <div class="menuItem col-sm-2" id="mm5"><a href="/trainings.html"><i class="fas fa-award"></i></a></div>
+                    <div class="menuItem col-sm-2" id="mm3"><a href="/internships.html"><i
+                                class="fas fa-briefcase"></i></a></div>
+                    <div class="menuItem col-sm-2" id="mm4"><a href="/projects.html"><i
+                                class="fas fa-file-code"></i></a></div>
+                    <div class="menuItem col-sm-2" id="mm5"><a href="/trainings.html"><i class="fas fa-award"></i></a>
+                    </div>
                 </div>
 
             </div>
