--- a/skills.html
+++ b/skills.html
@@ -46,17 +46,13 @@
                 <div class="inner" style="overflow-x: hidden;">
                     <div class="container-fluid row" id="skills_tile">
                         <div id="user-content-toc">
-                            <ul align="center">
-                                <summary>
-                                    <h2 style="display: inline-block">Technologies That I Know👨🏻‍💻</h2>
-                                </summary>
-                            </ul>
+                            <h2 style="text-align: center;">Technologies That I Know👨🏻‍💻</h2>
                         </div>
                         <!--tech stack icons-->
                         <p align="center">
                             <a href="https://skillicons.dev">
-                                <img
-                                    src="https://skillicons.dev/icons?i=androidstudio,azure,bootstrap,c,cs,cloudflare,css,dart,discord,docker,dotnet,express,figma,firebase,flask,flutter,git,github,html,java,js,jquery,mongodb,mysql,nodejs,php,postgres,postman,py,r,react,redux,sass,tailwind,ts,visualstudio,vscode" />
+                                <img style="width: 90%;margin: 0 auto;"
+                                    src="https://skillicons.dev/icons?i=androidstudio,azure,bootstrap,c,cs,cloudflare,css,dart,discord,docker,dotnet,express,figma,firebase,flask,flutter,git,github,html,java,js,jquery,mongodb,mysql,nodejs,php,postgres,postman,py,r,react,redux,sass,tailwind,ts,visualstudio,vscode&perline=9" />
                             </a>
                         </p>
                     </div>
